cabal-version: 3.4
name: haskell-async
version: 0.1.0.0
license: Apache-2.0
author: Benjamin Maurer
maintainer: maurer.benjamin@gmail.com
build-type: Simple

common warnings
  ghc-options: -Wall

library easy-racer-client
  import: warnings
  exposed-modules: EasyRacerClient
  hs-source-dirs: lib
  build-depends:
    HTTP ^>=4000.4.1,
    async ^>=2.2.5,
    base ^>=4.18.3.0,
    bytestring ^>=0.12.0.0,
    cryptohash-sha512 ^>=0.11.102.0,
    network-uri >=2.6 && <2.7,
    random ^>=1.3.1,

  default-language: GHC2021

executable haskell-async
  import: warnings
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts

  build-depends:
    base ^>=4.18.3.0,
    bytestring ^>=0.12.0.0,
    haskell-async:easy-racer-client,

  hs-source-dirs: app
  default-language: GHC2021

test-suite tests
  import: warnings
  type: exitcode-stdio-1.0
  main-is: EasyRacerTest.hs
  hs-source-dirs: tests
  build-depends:
    base ^>=4.18.3.0,
    haskell-async:easy-racer-client,
    tasty ^>=1.5.3,
    tasty-hunit ^>=0.10.2,
    testcontainers ^>=0.5.1.0,

  ghc-options:
    -threaded

  default-language: GHC2021
