[project]
name = "python-asyncio-taskgroup"
version = "0.1.0"
authors = [
    { name = "James Ward", email = "james@jamesward.com" }
]
dependencies = [
    "aiohttp>=3.8.5",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "testcontainers>=3.7.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
]

[tool.hatch.metadata]
allow-direct-references = true
