[package]
name = "rust_tokio"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
reqwest = "0.12.4"
testcontainers = "0.17.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
rand = "0.8.5"
sha2 = "0.10.8"
tokio-util = "0.7.11"
procinfo = "0.4.2"
procfs = "0.16.0"
async-recursion = "1.1.1"
