[package]
name = "rust_tokio"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
reqwest = "0.12.5"
testcontainers = "0.25.0"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
rand = "0.9.1"
sha2 = "0.10.9"
tokio-util = "0.7.15"
procinfo = "0.4.2"
procfs = "0.17.0"
async-recursion = "1.1.1"
