[package]
name = "rust_tokio"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
reqwest = "0.13.1"
testcontainers = "0.26.2"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
rand = "0.9.1"
sha2 = "0.10.9"
tokio-util = "0.7.15"
procinfo = "0.4.2"
procfs = "0.18.0"
async-recursion = "1.1.1"
